# elastic-annotator

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy-main-ec2.yml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: constants.py  settings.py
backend/app/schemas/: api.py
backend/app/services/: elastic_pipeline.py  session_store.py  sheet_mapping_store.py  sheets.py
backend/app/utils/: timecode.py
backend/app/worker/: run_session.py
deploy/: run_render_queue.py
deploy/cloudflared/: config.yml.example
deploy/ec2/: deploy_on_server.sh
deploy/systemd/: elastic-annotator.service
docs/: ANNOTATOR_UX_GUIDE_KR.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: EventTable.tsx
frontend/src/pages/: AnnotationPage.tsx  MatchAnnotateRedirectPage.tsx  MatchRedirectPage.tsx  SessionCreatePage.tsx  SessionRedirectPage.tsx
